--- a/addcon.html
+++ b/addcon.html
@@ -15,6 +15,7 @@
 <body>
 <div class="up">
 
+	<image src="https://github.com/ayushsatyam146/sihpics/blob/master/head.png?raw=true" class="headpic" alt="header">
 	<ul>
 		<li><a href="#">Home</a></li>
 		<li><a href="#">Online Schemes</a></li>
@@ -24,6 +25,8 @@
 		<li class="logout"><a href="index.html">Log-out</a></li>
 	</ul>
 </div>
+<br>
+
 
 <div class="login">
 	
@@ -38,12 +41,12 @@
 	<input class="input100" placeholder="Truck-Id">
 	<br>
 	<br>
-	<input class="input100" placeholder="Contact">
+	<input class="input100" placeholder="Driver Contact">
 	<br>
 	<br>
 	
 	<a href="success.html">
-	<button type="button" class="btn btn-primary">Push-Details</button>
+	<button type="button" class="btn btn-primary">Add-Details</button>
 	</a>
 	
 </div>
