--- a/admin.html
+++ b/admin.html
@@ -5,7 +5,7 @@
 
 	<link rel = "stylesheet"
    type = "text/css"
-   href = "user.css" />
+   href = "admin.css" />
 
    <link href="https://fonts.googleapis.com/css?family=Poppins:700&display=swap" rel="stylesheet">
 
@@ -13,6 +13,7 @@
 
 </head>
 <body>
+	<image src="https://github.com/ayushsatyam146/sihpics/blob/master/head.png?raw=true" class="headpic" alt="header">
 
 	<div class="up">
 
