--- a/details.html
+++ b/details.html
@@ -13,6 +13,7 @@
 
 </head>
 <body>
+	<image src="https://github.com/ayushsatyam146/sihpics/blob/master/head.png?raw=true" class="headpic" alt="header">
 
 <div class="up">
 
@@ -29,9 +30,9 @@
 <div class="enter">
 	<h2><bold>Tracking-Id : JW1238</bold></h2>
 	<h2><bold>Number of Shipments : 53</bold></h2>
-	<h2><bold>Expected Arrival at destination : 2 days from now</bold></h2>
+	<h2><bold>Expected Arrival - 01 days : 21 hours </bold></h2>
 	<h2><bold>Location : </bold></h2>
-	<img src=" map.png" class="map" alt="location Tracking">
+	<img src="https://github.com/ayushsatyam146/sihpics/blob/master/map.PNG?raw=true" class="map" alt="location Tracking">
 	<br>
 	<br>
 	<a href="track.html">
