--- a/track.html
+++ b/track.html
@@ -13,6 +13,7 @@
 
 </head>
 <body>
+	<image src="https://github.com/ayushsatyam146/sihpics/blob/master/head.png?raw=true" class="headpic" alt="header">
 
 	<div class="up">
 
@@ -38,7 +39,7 @@
 	<input class="input100" type="captcha" name="pass" placeholder="Enter Captcha">
 	<br>
 	<br>
-	<img src="cap.png" style="left: 50%;" alt="Enter Captcha"
+	<img src="https://github.com/ayushsatyam146/sihpics/blob/master/cap.PNG?raw=true" style="left: 50%;" alt="Enter Captcha"
 	 class="cap"
 	>
 	<a href="details.html">
