--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -13,6 +14,7 @@
 
 </head>
 <body>
+	<image src="https://github.com/ayushsatyam146/sihpics/blob/master/head.png?raw=true" class="headpic" alt="header">
 <div class="up">
 
 	<ul>
