--- a/user.html
+++ b/user.html
@@ -13,7 +13,7 @@
 
 </head>
 <body>
-
+	<image src="https://github.com/ayushsatyam146/sihpics/blob/master/head.png?raw=true" class="headpic" alt="header">
 	<div class="up">
 
 	<ul>
